--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     3 Years Full Stack Developer Experience:
 I worked for 3 years as a Full Stack Developer, building and maintaining web applications from front-end to back-end. My role involved designing user interfaces, developing API integrations, and optimizing database performance. I collaborated closely with the design and product teams to deliver high-quality features on time. I also improved system performance, fixed bugs, and ensured smooth deployment processes. Throughout my experience, I worked with modern tools and technologies to deliver reliable, scalable solutions.
                 </p>
-                <a class="project-link" href="https://github.com/yourusername/project1" target="_blank">View Project</a>
+                <a class="project-link" href="https://anime9.org/" target="_blank">View Project</a>
             </div>
 
             <div class="project-card"> 
@@ -100,7 +100,7 @@ I worked for 3 years as a Full Stack Developer, building and maintaining web app
                 <p>
 1.5 Years Experience with LOFT (US-based Work):
 I worked Remote job  for 1.5 years with the LOFT brand, supporting US-based operations and customer needs. My role involved assisting customers, managing orders, and ensuring a smooth shopping experience. I handled communication professionally and provided solutions to improve satisfaction and retention. I also collaborated with the team to maintain brand standards and deliver high-quality service. This experience strengthened my communication, customer handling, and problem-solving skills.                </p>
-                <a class="project-link" href="https://github.com/yourusername/project2" target="_blank">View Project</a>
+                <a class="project-link" href="https://www.loft.com/" target="_blank">View Project</a>
             </div>
         </section>
 
@@ -148,8 +148,8 @@ I worked Remote job  for 1.5 years with the LOFT brand, supporting US-based oper
             <ul class="contact">
                 <li>📧 Email: usmanvirjia@gmail.com</li>
                 <li>📲 WhatsApp: +923049357059</li>
-                <li>📦 GitHub: github.com/yourusername</li>
-                <li>💼 Portfolio: yourdomain.com</li>
+                <li>📦 GitHub: github.com/usman-virjia</li>
+                <li>💼 Portfolio:https://usman-virjia.github.io/MY-Resume/</li>
             </ul>
         </section>
     </div>
